--- a/src/Styles/Pages/Home.css
+++ b/src/Styles/Pages/Home.css
@@ -1,6 +1,6 @@
 #home {
    
-  
+  min-height: 100vh;
   
     /* border: .001px solid green; */
     /* display:flex;
@@ -21,3 +21,15 @@
     text-decoration: underline;
     
   }
+  #video {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+    z-index: -1;
+    background-color: #000000;
+    
+    }
+    
+  
