--- a/src/Styles/Pages/Home.css
+++ b/src/Styles/Pages/Home.css
@@ -31,5 +31,13 @@
     background-color: #000000;
     
     }
+    .card2{
+      color: #ffffff;
+      transition: 0.4s ease-out;
     
+    }
+    
+      .card2:hover{
+        transform: translateY(10px) 
+      }
   
